Fix alignment issue with portfolio nabber

--- a/css/bonsai-style.scss
+++ b/css/bonsai-style.scss
@@ -290,6 +290,10 @@ a:visited {
                 }
             }
             
+            li a div {
+                text-align: center;
+            }
+            
             .active {
                 color: $spotify1;
             }
